Fixing particle js z-Index.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 .particles canvas {
   z-index: -1;
+  display: none;
 }
