--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -3,7 +3,7 @@ nav {
   width: max-content;
   display: block;
   padding: 0.7rem 1.7rem;
-  z-index: 10;
+  z-index: 20;
   position: fixed;
   left: 50%;
   transform: translateX(-50%);
