--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,7 @@ h3,
 h4,
 h5 {
   font-weight: 500;
+  position: relative;
 }
 
 h1 {
